Fixed bug for when the navbar was closed on mobile it couldnt be opened on desktop, new bug, it has the wrong styles

--- a/frontend/src/styles/navbarStyles.module.scss
+++ b/frontend/src/styles/navbarStyles.module.scss
@@ -91,9 +91,7 @@ a {
   fill: $default-text-color;
 }
 
-@media (orientation: portrait) {
-
-
+@media (max-width: 780px) {
   .navContainer{
     position: fixed;
     display: flex;
@@ -109,6 +107,10 @@ a {
   }
 
   .pagesWrapper{
+    display: none;
+  }
+
+  .pagesWrapperMobile{
     background-color: red;
     position: fixed;
     display: flex;
